[gd_scene load_steps=22 format=3 uid="uid://c6xxkytlbq8q2"]

[ext_resource type="Script" path="res://Player.gd" id="1_ksfbt"]
[ext_resource type="PackedScene" uid="uid://bjm31xolmq028" path="res://models/characters/templateCharaterModel.glb" id="2_u05fy"]
[ext_resource type="Texture2D" uid="uid://bjwqt58v7cun0" path="res://addons/kenney_animated_characters/Skins/skaterMaleA.png" id="3_rtgxh"]
[ext_resource type="PackedScene" uid="uid://cf1dcxwv6bvl3" path="res://models/Pistol.glb" id="3_w7dyo"]
[ext_resource type="Texture2D" uid="uid://vwob30tkwej4" path="res://addons/kenney_particle_pack/star_06.png" id="4_8wo5q"]
[ext_resource type="Script" path="res://models/characters/FPPCamera.gd" id="4_huefa"]
[ext_resource type="PackedScene" uid="uid://ctdhwjuqvh51r" path="res://models/weapons/guns/ak47/ak47.tscn" id="7_pq2a5"]
[ext_resource type="PackedScene" uid="uid://cky0t1cuuuo5y" path="res://models/weapons/knifes/knife.tscn" id="8_qsa7b"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6l0xm"]
albedo_texture = ExtResource("3_rtgxh")

[sub_resource type="BoxShape3D" id="BoxShape3D_efq5s"]

[sub_resource type="Gradient" id="Gradient_q5cnu"]
offsets = PackedFloat32Array(0, 0.141221, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_is51c"]
gradient = SubResource("Gradient_q5cnu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yy8r8"]
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_is51c")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4smqo"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.960784, 0.670588, 1)
albedo_texture = ExtResource("4_8wo5q")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_hkkgb"]
material = SubResource("StandardMaterial3D_4smqo")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_jhgv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TPPCamera/TPPPistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.499933, -0.0734346, -3.35847)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TPPCamera/TPPPistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.898845, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPPCamera/FPPPistol:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FPPCamera/FPPPistol:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.454152, 0, 0)]
}

[sub_resource type="Animation" id="Animation_knepc"]
resource_name = "idle"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPPCamera/FPPPistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.284894, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPPCamera/FPPPistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.122103, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TPPCamera/TPPPistol:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.499933, -0.0734346, -3.35847), Vector3(0.5, -0.108, -3.358)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TPPCamera/TPPPistol:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.445059, 0, 0), Vector3(0.322886, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qcgne"]
resource_name = "move"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPPCamera/FPPPistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2, 0.5),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.455732, -0.215424, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.55565, -0.198737, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TPPCamera/TPPPistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2, 0.5),
"update": 0,
"values": [Vector3(0.499933, -0.0734346, -3.35847), Vector3(0.456, -0.038, -3.358), Vector3(0.5, -0.073, -3.358), Vector3(0.556, -0.042, -3.358), Vector3(0.5, -0.073, -3.358)]
}

[sub_resource type="Animation" id="Animation_efeb8"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPPCamera/FPPPistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.185618, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPPCamera/FPPPistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.454152, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TPPCamera/TPPPistol:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.073, -3.358), Vector3(0.499933, -0.0734346, -3.35847)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TPPCamera/TPPPistol:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.898845, 0, 0), Vector3(0.445059, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FPPCamera/FPPAK47:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.289, -0.144, -0.339), Vector3(0.289, -0.144, -0.389)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FPPCamera/FPPAK47:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 0.0872665), Vector3(0, 1.5708, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FPPCamera/FPPKnife:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.23, -0.465, -0.63), Vector3(0.23, -0.465, -0.6)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FPPCamera/FPPKnife:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.312414, 1.03323, 1.76627), Vector3(0.363028, 1.26711, 1.91986)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6wdk"]
_data = {
"RESET": SubResource("Animation_jhgv2"),
"idle": SubResource("Animation_knepc"),
"move": SubResource("Animation_qcgne"),
"shoot": SubResource("Animation_efeb8")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_68m2n"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("FPPCamera:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("TPPCamera:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("FPPCamera/FPPPistol:visible")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("FPPCamera/FPPAK47:visible")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("FPPCamera/FPPKnife:visible")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("TPPCamera/TPPPistol:visible")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("TPPCamera/TPPAK47:visible")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("TPPCamera/TPPKnife:visible")
properties/9/spawn = true
properties/9/replication_mode = 1

[node name="Player2" type="CharacterBody3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
collision_layer = 2
script = ExtResource("1_ksfbt")

[node name="NormalDeclan" parent="." instance=ExtResource("2_u05fy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -2.38419e-07, 0)

[node name="characterMedium" parent="NormalDeclan/Root/Skeleton3D" index="0"]
material_override = SubResource("StandardMaterial3D_6l0xm")

[node name="HitBoxDeclan" type="CollisionShape3D" parent="."]
transform = Transform3D(1.085, 0, 0, 0, 3.755, 0, 0, 0, 1.05, 0, 1.88, 0)
shape = SubResource("BoxShape3D_efq5s")

[node name="FPPCamera" type="Camera3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 3, 0)
script = ExtResource("4_huefa")

[node name="FPPPistol" parent="FPPCamera" instance=ExtResource("3_w7dyo")]
transform = Transform3D(1, 0, 0, 0, 0.898633, -0.4387, 0, 0.4387, 0.898633, 0.5, -0.25, -0.5)
visible = false

[node name="MuzzleFlash" type="GPUParticles3D" parent="FPPCamera/FPPPistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0588368, -0.313209)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_yy8r8")
draw_pass_1 = SubResource("PlaneMesh_hkkgb")

[node name="FPPAK47" parent="FPPCamera" instance=ExtResource("7_pq2a5")]
transform = Transform3D(-5.42999e-07, 0, 0.15, 0, 0.15, 0, -0.15, 0, -5.42999e-07, 0.289, -0.144, -0.389)
visible = false

[node name="MuzzleFlash" type="GPUParticles3D" parent="FPPCamera/FPPAK47"]
transform = Transform3D(1, 0, -3.90799e-14, 0, 1, 0, 3.90799e-14, 0, 1, 3.35, 0.019, 0.002)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_yy8r8")
draw_pass_1 = SubResource("PlaneMesh_hkkgb")

[node name="FPPKnife" parent="FPPCamera" instance=ExtResource("8_qsa7b")]
transform = Transform3D(0.0216145, -0.0396901, 0.0892049, 0.087845, -0.0319727, -0.0355106, 0.0426155, 0.0860374, 0.027955, 0.23, -0.465, -0.6)
visible = false

[node name="FPPRayCast3D" type="RayCast3D" parent="FPPCamera"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="TPPCamera" type="Camera3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1.80517, 0.861022, 0, -0.861022, 1.80517, 0, 5.525, 5)

[node name="TPPPistol" parent="TPPCamera" instance=ExtResource("3_w7dyo")]
transform = Transform3D(1, 0, 0, 0, 0.622514, -0.782608, 0, 0.782608, 0.622514, 0.499933, -0.0734346, -3.35847)
visible = false

[node name="MuzzleFlash" type="GPUParticles3D" parent="TPPCamera/TPPPistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0588368, -0.313209)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_yy8r8")
draw_pass_1 = SubResource("PlaneMesh_hkkgb")

[node name="TPPAK47" parent="TPPCamera" instance=ExtResource("7_pq2a5")]
transform = Transform3D(7.85464e-05, 3.72529e-09, 0.15, 0.0645766, 0.135388, -3.38133e-05, -0.135388, 0.0645766, 7.08911e-05, 0.289596, -0.0251141, -3.21415)

[node name="MuzzleFlash" type="GPUParticles3D" parent="TPPCamera/TPPAK47"]
transform = Transform3D(1, 0, -3.90799e-14, 0, 1, 0, 3.90799e-14, 0, 1, 3.35, 0.019, 0.002)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_yy8r8")
draw_pass_1 = SubResource("PlaneMesh_hkkgb")

[node name="TPPKnife" parent="TPPCamera" instance=ExtResource("8_qsa7b")]
transform = Transform3D(0.076727, -0.0459946, 0.044693, 0.064132, 0.0547739, -0.05373, 0.000232849, 0.0698879, 0.0715236, 0.495, -0.465, -0.665)
visible = false

[node name="TPPRayCast3D" type="RayCast3D" parent="TPPCamera"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="HitBoxGun" type="CollisionShape3D" parent="."]
transform = Transform3D(0.145, 0, 0, 0, 0.625, 0, 0, 0, 0.625, 1, 2.58, -1.115)
shape = SubResource("BoxShape3D_efq5s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6wdk")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_68m2n")

[editable path="NormalDeclan"]
